src/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <description>This field will be displayed if record type field is Local.
User specified.</description>
        <label>Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Legacy_Id__c</fullName>
        <description>This field has concatenated Legacy composite keys from legacy table to ensure uniqueness during migration.  

This will be used as a lookup &apos;external id&apos; by its child object.

Accenture to TRIM Spaces in Mainframe Keys (i.e. SS, CMIS-POP)</description>
        <externalId>true</externalId>
        <label>Address_Legacy_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <description>This field will be displayed if record type field is Local.
Read-only. Auto-populated by the system based on Postal Code</description>
        <label>Singpost Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Unique_ID__c</fullName>
        <label>Address Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Number__c</fullName>
        <formula>Packing_Code__r.Airline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_House_Number__c</fullName>
        <description>This field will be displayed if record type field is Local.
Read-only. Auto-populated by the system based on Postal Code</description>
        <label>House/Block Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Name_2__c</fullName>
        <label>Building Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <description>This field will be displayed if record type field is Local. 
Read-only. Auto-populated by the system based on Postal Code</description>
        <formula>Postal_Code__r.Building_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_O_Company__c</fullName>
        <description>This field will be displayed if record type field is Internal.
System generated</description>
        <label>C/O Company</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City Code</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Code</label>
        <referenceTo>SPH_Company__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Company_Code__r.Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concatenated_Address_Fields_2__c</fullName>
        <formula>Block_House_Number__c &amp; &quot; &quot; &amp;
Level_Number__c &amp; &quot; &quot; &amp;
Unit_Number__c &amp; &quot; &quot; &amp;
Postal_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concatenated Address Fields 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concatenated_Address_Fields__c</fullName>
        <formula>Street_Name__c &amp; &quot; &quot; &amp; 
Building_Name__c &amp; &quot; &quot; &amp; 
Block_House_Number__c &amp; &quot; &quot; &amp; 
Level_Number__c &amp; &quot; &quot; &amp; 
Unit_Number__c &amp; &quot; &quot; &amp; 
Postal_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concatenated Address Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Legacy_Id__c</fullName>
        <label>Contact Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>Country__r.Country_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>SPH_Department__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division Code</label>
        <referenceTo>SPH_Division__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_Number_1__c</fullName>
        <formula>City__r.Flight_Number_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Number 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number_2__c</fullName>
        <formula>City__r.Flight_Number_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Number 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Street_Name__c + &apos; &apos; + Block_House_Number__c + &apos; &apos; + Building_Name__c + &apos;,&apos; + &apos; &apos; + Postal_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Applicable__c</fullName>
        <formula>IF(RecordType.Name = &apos;Overseas&apos;,False,True)</formula>
        <label>GST Applicable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>House_Type__c</fullName>
        <formula>Postal_Code__r.House_Type_Description__c</formula>
        <label>House Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Number__c</fullName>
        <description>This field will be displayed if record type field is Local.
User specified</description>
        <label>Level Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Code</label>
        <referenceTo>SPH_Location__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Delivery_Complaint_Cases_16_wks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Newspaper Complaint Cases (16 wks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Delivery_Complaint_Cases_30_days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Newspaper Complaint Case (30 days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <formula>Postal_Code__r.Number_of_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packing_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packing Code</label>
        <referenceTo>Packing_Grp__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packing_Group_Description__c</fullName>
        <formula>Packing_Code__r.Packing_Group_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packing Group Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Text__c</fullName>
        <formula>Postal_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be displayed if record type field is Local.
User specified</description>
        <label>Postal Code</label>
        <referenceTo>Singpost_Address__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Sector__c</fullName>
        <formula>Postal_Code__r.Postal_Sector__c</formula>
        <label>Postal Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section Code</label>
        <referenceTo>SPH_Section__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <formula>Packing_Code__r.Sequence_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street_Name_2__c</fullName>
        <label>Street Name 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <description>This field will be displayed if record type field is Local. 
Read-only. Auto-populated by the system based on Postal Code</description>
        <formula>Postal_Code__r.Street_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <description>This field will be displayed if record type field is Local.
User specified</description>
        <label>Unit Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <formula>IF( House_Type__c ==&quot;&quot;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zonal_Code__c</fullName>
        <formula>Country__r.Zonal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zonal Code</label>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>Airline</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Address__c.Airline</value>
        </filters>
        <label>Airline Addresses</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Address_Type__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Postal_Code__c</columns>
        <columns>Building_Name__c</columns>
        <columns>Building_Name_2__c</columns>
        <columns>Zonal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Internal</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Address__c.Internal</value>
        </filters>
        <label>Internal</label>
    </listViews>
    <listViews>
        <fullName>Local</fullName>
        <columns>NAME</columns>
        <columns>Address_Unique_ID__c</columns>
        <columns>Country__c</columns>
        <columns>House_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Address__c.Local</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>160092</value>
        </filters>
        <label>Local</label>
    </listViews>
    <listViews>
        <fullName>Local_Addresses</fullName>
        <columns>NAME</columns>
        <columns>Zonal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Address__c.Local</value>
        </filters>
        <label>Local Addresses</label>
    </listViews>
    <listViews>
        <fullName>Overseas</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Address__c.Overseas</value>
        </filters>
        <label>Overseas</label>
    </listViews>
    <listViews>
        <fullName>Overseas_Adresses</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Address__c.Overseas</value>
        </filters>
        <label>Overseas Adresses</label>
    </listViews>
    <listViews>
        <fullName>ehAddresses</fullName>
        <columns>NAME</columns>
        <columns>Address_Legacy_Id__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>Address_3__c</columns>
        <columns>Address_4__c</columns>
        <columns>Address_Unique_ID__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>Address_Type__c</columns>
        <columns>Unit__c</columns>
        <columns>Unit_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Address_Type__c</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>ehAddresses</label>
    </listViews>
    <nameField>
        <label>Address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>Airline</fullName>
        <active>true</active>
        <description>For Airline Subscriber</description>
        <label>Airline</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>For Internal Subscribers</description>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local</fullName>
        <active>true</active>
        <description>For Local Subscribers</description>
        <label>Local</label>
    </recordTypes>
    <recordTypes>
        <fullName>Overseas</fullName>
        <active>true</active>
        <description>For Overseas Subscribers</description>
        <label>Overseas</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ValidateMinof2CharEnteredLevelNumber</fullName>
        <active>true</active>
        <description>Validate min of 2 char entered when field is populated</description>
        <errorConditionFormula>AND( 
LEN(   Level_Number__c   ) &lt; 2, 
LEN(Level_Number__c) &gt; 0,
OR( 
RecordType.Name = &quot;Local&quot;, 
RecordType.Name = &quot;Airline&quot;
) 
)</errorConditionFormula>
        <errorDisplayField>Level_Number__c</errorDisplayField>
        <errorMessage>Level must be at least two characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateMinof2CharEnteredUnitNumber</fullName>
        <active>true</active>
        <description>Validate min of 2 char entered when field is populated</description>
        <errorConditionFormula>AND( 
LEN(  Unit_Number__c  ) &lt; 2, 
LEN(  Unit_Number__c  ) &gt; 0,
OR( 
RecordType.Name = &quot;Local&quot;, 
RecordType.Name = &quot;Airline&quot;
) 
)</errorConditionFormula>
        <errorDisplayField>Unit_Number__c</errorDisplayField>
        <errorMessage>Unit must be at least two characters.</errorMessage>
    </validationRules>
</CustomObject>